--- a/app/src/main/res/layout/fragment_sheet.xml
+++ b/app/src/main/res/layout/fragment_sheet.xml
@@ -8,6 +8,7 @@
     android:layout_width="match_parent"
     android:layout_height="400dp"
     android:clickable="true"
+    android:elevation="0dp"
     android:orientation="vertical"
     app:behavior_skipCollapsed="true"
     app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
