--- a/app/src/main/res/layout/fragment_browser.xml
+++ b/app/src/main/res/layout/fragment_browser.xml
@@ -49,7 +49,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
-            android:mediaRouteTypes="user" />
+            android:mediaRouteTypes="user"
+            app:mediaRouteButtonTint="?attr/colorControlNormal" />
 
     </LinearLayout>
 
