--- a/app/src/main/res/layout/card_history.xml
+++ b/app/src/main/res/layout/card_history.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -10,66 +9,57 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal">
-
-        <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/card_history_image_thumbnail"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_margin="8dp"
-            android:src="@drawable/icon_video"
-            app:shapeAppearance="@style/AppTheme.RoundedShapeAppearance" />
+        android:layout_margin="8dp"
+        android:orientation="vertical">
 
         <LinearLayout
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="4dp"
-            android:layout_weight="1"
-            android:orientation="vertical">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/card_history_text_title"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:ellipsize="marquee"
-                    android:singleLine="true"
-                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
-                    tools:text="Some title or name" />
-
-                <TextView
-                    android:id="@+id/card_history_text_time"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="8dp"
-                    android:singleLine="true"
-                    tools:text="00:00" />
-
-            </LinearLayout>
+            android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/card_history_text_host"
-                android:layout_width="wrap_content"
+                android:id="@+id/card_history_text_title"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:ellipsize="marquee"
                 android:singleLine="true"
-                tools:text="@string/card_history_host" />
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
+                tools:text="Some title or name" />
 
             <TextView
-                android:id="@+id/card_history_text_file"
+                android:id="@+id/card_history_text_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:ellipsize="marquee"
+                android:layout_marginStart="8dp"
                 android:singleLine="true"
-                tools:text="@string/card_history_file" />
+                tools:text="00:00" />
 
         </LinearLayout>
+
+        <TextView
+            android:id="@+id/card_history_text_source"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ellipsize="marquee"
+            android:singleLine="true"
+            tools:text="@string/card_history_source" />
+
+        <TextView
+            android:id="@+id/card_history_text_host"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ellipsize="marquee"
+            android:singleLine="true"
+            tools:text="@string/card_history_host" />
+
+        <TextView
+            android:id="@+id/card_history_text_file"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ellipsize="marquee"
+            android:singleLine="true"
+            tools:text="@string/card_history_file" />
 
     </LinearLayout>
 
